--- a/code_refactor.html
+++ b/code_refactor.html
@@ -24,6 +24,7 @@
             </ul>
         </div>
     </div>
+    <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="images/search-engine-optimization.jpg" alt="Search Engine Optimization cloud organization" class="float-left" />
