Consolidated CSS codes

--- a/code_refactor.html
+++ b/code_refactor.html
@@ -39,6 +39,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
+            <section id="online-reputation-management" class="combine"></section>
             <img src="images/online-reputation-management.jpg" alt="Reputation Graph Chart" class="float-right" />
             <summary><h2>Online Reputation Management</h2></summary>
             <p>
@@ -48,6 +49,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
+            <section id="social-media-marketing" class="combine"></section>
             <img src="images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
             <summary><h2>Social Media Marketing</h2></summary>
             <p>
@@ -59,7 +61,7 @@
     </main>
     <aside class="benefits">
         <aside class="benefit-lead">
-            <h3>Lead Generation</h3>
+            <summary><h3>Lead Generation</h3></summary>
             <img src="images/lead-generation.png" alt="Gear, Funnel, Money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
@@ -67,7 +69,7 @@
             </p>
         </aside>
         <aside class="benefit-brand">
-            <h3>Brand Awareness</h3>
+            <summary><h3>Brand Awareness</h3></summary>
             <img src="images/brand-awareness.png" alt="Clothing Light Bulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
@@ -75,7 +77,7 @@
             </p>
         </aside>
         <aside class="benefit-cost">
-            <h3>Cost Management</h3>
+            <summary><h3>Cost Management</h3></summary>
             <img src="images/cost-management.png" alt="Gear icon surrounded by money"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
