Organized CSS selectors to follow the semantic structure of the HTML elements

--- a/code_refactor.html
+++ b/code_refactor.html
@@ -48,7 +48,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing"> -->
             <section id="social-media-marketing" class="combine"></section>
             <img src="images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
             <summary><h2>Social Media Marketing</h2></summary>
