--- a/code_refactor.html
+++ b/code_refactor.html
@@ -31,7 +31,9 @@
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="images/search-engine-optimization.jpg" alt="Search Engine Optimization cloud organization"
                 class="float-left" />
-            <summary><h2>Search Engine Optimization</h2></summary>
+            <summary>
+                <h2>Search Engine Optimization</h2>
+            </summary>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
                 travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
@@ -41,17 +43,21 @@
         <section id="online-reputation-management" class="online-reputation-management">
             <section id="online-reputation-management" class="combine"></section>
             <img src="images/online-reputation-management.jpg" alt="Reputation Graph Chart" class="float-right" />
-            <summary><h2>Online Reputation Management</h2></summary>
+            <summary>
+                <h2>Online Reputation Management</h2>
+            </summary>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                 internet connection to say whatever they want about your business. Online Reputation Management gives
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing"> -->
+        <section id="social-media-marketing" class="social-media-marketing">
             <section id="social-media-marketing" class="combine"></section>
             <img src="images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
-            <summary><h2>Social Media Marketing</h2></summary>
+            <summary>
+                <h2>Social Media Marketing</h2>
+            </summary>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
@@ -61,7 +67,9 @@
     </main>
     <aside class="benefits">
         <aside class="benefit-lead">
-            <summary><h3>Lead Generation</h3></summary>
+            <summary>
+                <h3>Lead Generation</h3>
+            </summary>
             <img src="images/lead-generation.png" alt="Gear, Funnel, Money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
@@ -69,7 +77,9 @@
             </p>
         </aside>
         <aside class="benefit-brand">
-            <summary><h3>Brand Awareness</h3></summary>
+            <summary>
+                <h3>Brand Awareness</h3>
+            </summary>
             <img src="images/brand-awareness.png" alt="Clothing Light Bulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
@@ -77,7 +87,9 @@
             </p>
         </aside>
         <aside class="benefit-cost">
-            <summary><h3>Cost Management</h3></summary>
+            <summary>
+                <h3>Cost Management</h3>
+            </summary>
             <img src="images/cost-management.png" alt="Gear icon surrounded by money"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
