Adding another link for css file directly to github repo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://github.com/ShueMoua/Code_Refactor/blob/master/style.css">
     <title>Horiseon Solution Services</title>
 </head>
 
