--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://github.com/ShueMoua/Code_Refactor/style.css">
     <title>Horiseon Solution Services</title>
 </head>
 
@@ -30,7 +29,7 @@
     <figure class="hero"></figure>
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" alt="Search Engine Optimization cloud organization"
+            <img src="./images/search-engine-optimization.jpg" alt="Search Engine Optimization cloud organization"
                 class="float-left" />
             <summary>
                 <h2>Search Engine Optimization</h2>
@@ -42,7 +41,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="images/online-reputation-management.jpg" alt="Reputation Graph Chart" class="float-right" />
+            <img src="./images/online-reputation-management.jpg" alt="Reputation Graph Chart" class="float-right" />
             <summary>
                 <h2>Online Reputation Management</h2>
             </summary>
@@ -53,7 +52,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
+            <img src="./images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
             <summary>
                 <h2>Social Media Marketing</h2>
             </summary>
@@ -69,7 +68,7 @@
             <summary>
                 <h3>Lead Generation</h3>
             </summary>
-            <img src="images/lead-generation.png" alt="Gear, Funnel, Money" />
+            <img src="./images/lead-generation.png" alt="Gear, Funnel, Money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -79,7 +78,7 @@
             <summary>
                 <h3>Brand Awareness</h3>
             </summary>
-            <img src="images/brand-awareness.png" alt="Clothing Light Bulb" />
+            <img src="./images/brand-awareness.png" alt="Clothing Light Bulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -89,7 +88,7 @@
             <summary>
                 <h3>Cost Management</h3>
             </summary>
-            <img src="images/cost-management.png" alt="Gear icon surrounded by money"></img>
+            <img src="./images/cost-management.png" alt="Gear icon surrounded by money"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
