--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <figure class="hero"></figure>
     <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization" class="apple">
             <img src="./images/search-engine-optimization.jpg" alt="Search Engine Optimization cloud organization"
                 class="float-left" />
             <summary>
@@ -40,7 +40,7 @@
                 your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management" class="apple">
             <img src="./images/online-reputation-management.jpg" alt="Reputation Graph Chart" class="float-right" />
             <summary>
                 <h2>Online Reputation Management</h2>
@@ -51,7 +51,7 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="apple">
             <img src="./images/social-media-marketing.jpg" alt="Social Media Logos" class="float-left" />
             <summary>
                 <h2>Social Media Marketing</h2>
@@ -64,7 +64,7 @@
         </section>
     </main>
     <aside class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefit-3">
             <summary>
                 <h3>Lead Generation</h3>
             </summary>
@@ -74,7 +74,7 @@
                 to your website.
             </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefit-3">
             <summary>
                 <h3>Brand Awareness</h3>
             </summary>
@@ -84,7 +84,7 @@
                 for your business.
             </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefit-3">
             <summary>
                 <h3>Cost Management</h3>
             </summary>
