--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="https://shuemoua.github.io/Code-Refactor/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Horiseon Solution Services</title>
 </head>
 
